동영상 업로드

--- a/1.html
+++ b/1.html
@@ -15,7 +15,8 @@
     <li><a href="1.html"> HTML♥</a></li>
     <li><a href="2.html"> CSS♥ </a></li>
     <li><a href="3.html"> JavaScript♥</a></li>
-    <li><a href="4.html"> DESIGN♥</a></li>
+    <li><a href="4.html"> Design♥</a></li>
+    <li><a href="5.html"> Disney♥</a></li>
   </ul>
 
 
@@ -37,7 +38,7 @@
 
       <br><h3>C. 통계를 기반으로한 학습</h3>
       * <u><a href=https://www.advancedwebranking.com/html/>HTML 자주 사용되는 태그 순위</a></u><p>
-      <img src="통계" width="60%">
+      <img src="통계.jpg" width="60%">
 
       <br><h3>D. Html이 중요한 이유</h3>
       * HTML을 기반으로 한 웹상에서는 HTML의 태그가 검색엔진의 우위를 차지 한다.(노출up)<br>
@@ -70,7 +71,7 @@
       <br><h3>I. 웹의 기원</h3>
       * 웹의 메소포타미아 <br>
       <br>
-      <a href="http://info.cern.ch"><img src="메소포타미아" width="60%"></a><br>
+      <a href="http://info.cern.ch"><img src="메소포타미아.jpg" width="60%"></a><br>
 
 
 
