--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <li><a href="1.html"> HTML♥</a></li>
     <li><a href="2.html"> CSS♥ </a></li>
     <li><a href="3.html"> JavaScript♥</a></li>
-    <li><a href="4.html"> DESIGN♥</a></li>    
+    <li><a href="4.html"> Design♥</a></li>
+    <li><a href="4.html"> Disney♥</a></li>
   </ul>
 
   <img src="uneweb main img.jpg" width="100%">
