지브리 음악영상 추가

--- a/4.html
+++ b/4.html
@@ -22,6 +22,7 @@
 
 
 
+
   <img src="uneweb html study.jpg" width="100%">
     <h2>DESIGN Study Note</h2>
 
@@ -31,7 +32,12 @@ src="https://www.youtube.com/embed/_4XrAHOBgHQ" frameborder="0"
 allow="accelerometer; autoplay; encrypted-media; gyroscope;
 picture-in-picture" allowfullscreen></iframe>
 </p>
-
+<p>
+<iframe width="560" height="315"
+src="https://www.youtube.com/embed/of1ITq5_TDw" frameborder="0"
+allow="accelerometer; autoplay; encrypted-media; gyroscope;
+picture-in-picture" allowfullscreen></iframe>
+</p>
 
 
 </body>
