--- a/1.html
+++ b/1.html
@@ -1,115 +1,102 @@
 <!doctype html>
 <html>
-<head>
-  <title>Mungeeharu</title>
-  <meta charset="utf-8">
-</head>
+  <head>
+    <title>Mungeeharu</title>
+    <meta charset="utf-8">
+    <style>
+    body {
+      font-family:'Open Sans', sans-serif;
+    }
+    </style>
+
+    <style>
+    body {
+      background-image: url('디즈니페이지(하단).jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+    </style>
+
+  </head>
 
 
 
 
-<body>
+  <body>
 
-  <h1><a href="index.html"> Mungeeharu</a></h1>
-  <ul>
-    <li><a href="1.html"> HTML♥</a></li>
-    <li><a href="2.html"> CSS♥ </a></li>
-    <li><a href="3.html"> JavaScript♥</a></li>
-    <li><a href="4.html"> Design♥</a></li>
-    <li><a href="5.html"> Disney♥</a></li>
-  </ul>
 
+  <h1><a href="index.html"> MUNGEEHARU</a></h1>
+    <a href="web study-1.html"> HTML♥</a>
+    <a href="2.html"> CSS♥ </a>
+    <a href="3.html"> JavaScript♥</a>
+    <a href="4.html"> Design♥</a>
+    <a href="5.html"> Disney♥</a>
 
   <img src="uneweb html study.jpg" width="100%">
-    <h2>HTML Study Note</h2>
-  <br>
-      <h3>A. HTML코딩과 실습환경 준비</h3>
-      * 생활코딩 추천 편집기 : 아톰 <br>
-      * 추천검색어  : HTML Editor /Best HTML Editor 2020 <br>
 
-      <br><h3>B. TAG</h3>
-      * strong <br>
-      * u <br>
-      * h1~h6 <br>
-      * br <br>
-      * meta charset="utf-8" <br>
-      * P <br>
-      * p style="margin-top:60px;" <br>
 
-      <br><h3>C. 통계를 기반으로한 학습</h3>
-      * <u><a href=https://www.advancedwebranking.com/html/>HTML 자주 사용되는 태그 순위</a></u><p>
-      <img src="통계.jpg" width="60%">
-
-      <br><h3>D. Html이 중요한 이유</h3>
-      * HTML을 기반으로 한 웹상에서는 HTML의 태그가 검색엔진의 우위를 차지 한다.(노출up)<br>
-      * 문자를 이미지로 디자인해서 올린다면 검색엔진에서는 존재하지 않는것이 된다. <br>
-      * 웹은 공공재= 개방성 =접근성 <br>
-
-      <br><h3>E. 문법속성&이미지(img)</h3>
-      * <a href=https://unsplash.com/>언플레시</a>(무료 이미지 사이트)<br>
-      * img src="스터디" width="100%”<br>
-
-      <br><h3>F. 부모, 자식관계의 태그 - 목록</h3>
-      * ol, li -넘버로 목록표시 <br>
-      * ul, li -구분점으로 목록표시 <br>
-
-      <br><h3>G. 문서의 구조와 슈퍼스타들</h3>
-      * !doctype html <br>
-      * html <br>
-      * head - 명령어 <br>
-      * _title Mungeeharu title <br>
-      * _meta charset="utf-8" <br>
-      * body - 본문 <br>
-
-      <br><h3>H. 태그의 제왕</h3>
-      * 최고의 검색을 가능하게 했다.<br>
-      * 도시의 길과 인체의 혈관과 같은 기능 <br>
-      * Hyper Text Markup Language 의 첫글자 <br>
-      * Hyper Text를 의미가는 'a' ancer 정박하다.(정보의 바다에 정박하다.) = 링크 <br>
-      * a href=링크>링크할 개체 <br>
-
-      <br><h3>I. 웹의 기원</h3>
-      * 웹의 메소포타미아 <br>
-      <br>
-      <a href="http://info.cern.ch"><img src="메소포타미아.jpg" width="60%"></a><br>
+    <p style="margin-top:50px;">  <h2>HTML Study Note</h2></p>
+    <br>
 
 
 
 
 
 
-</body>
+
+        <h3>A. HTML코딩과 실습환경 준비</h3>
+        * 생활코딩 추천 편집기 : 아톰 <br>
+        * 추천검색어  : HTML Editor /Best HTML Editor 2020 <br>
+
+        <br><h3>B. TAG</h3>
+        * strong <br>
+        * u <br>
+        * h1~h6 <br>
+        * br <br>
+        * meta charset="utf-8" <br>
+        * P <br>
+        * p style="margin-top:60px;" <br>
+
+        <br><h3>C. 통계를 기반으로한 학습</h3>
+        * <u><a href=https://www.advancedwebranking.com/html/>HTML 자주 사용되는 태그 순위</a></u><p>
+        <img src="통계.jpg" width="60%">
+
+        <br><h3>D. Html이 중요한 이유</h3>
+        * HTML을 기반으로 한 웹상에서는 HTML의 태그가 검색엔진의 우위를 차지 한다.(노출up)<br>
+        * 문자를 이미지로 디자인해서 올린다면 검색엔진에서는 존재하지 않는것이 된다. <br>
+        * 웹은 공공재= 개방성 =접근성 <br>
+
+        <br><h3>E. 문법속성&이미지(img)</h3>
+        * <a href=https://unsplash.com/>언플레시</a>(무료 이미지 사이트)<br>
+        * img src="스터디" width="100%”<br>
+
+        <br><h3>F. 부모, 자식관계의 태그 - 목록</h3>
+        * ol, li -넘버로 목록표시 <br>
+        * ul, li -구분점으로 목록표시 <br>
+
+        <br><h3>G. 문서의 구조와 슈퍼스타들</h3>
+        * !doctype html <br>
+        * html <br>
+        * head - 명령어 <br>
+        * _title Mungeeharu title <br>
+        * _meta charset="utf-8" <br>
+        * body - 본문 <br>
+
+        <br><h3>H. 태그의 제왕</h3>
+        * 최고의 검색을 가능하게 했다.<br>
+        * 도시의 길과 인체의 혈관과 같은 기능 <br>
+        * Hyper Text Markup Language 의 첫글자 <br>
+        * Hyper Text를 의미가는 'a' ancer 정박하다.(정보의 바다에 정박하다.) = 링크 <br>
+        * a href=링크>링크할 개체 <br>
+
+        <br><h3>I. 웹의 기원</h3>
+        * 웹의 메소포타미아 <br>
+        <br>
+        <a href="http://info.cern.ch"><img src="메소포타미아.jpg" width="60%"></a><br>
+
+
+
+
+
+  </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<h1>Heading level 1</h1>
-<h2>Heading level 2</h2>
-<h3>Heading level 3</h3>
-<h4>Heading level 4</h4>
-<h5>Heading level 5</h5>
-<h6>Heading level 6</h6>
