--- a/2.html
+++ b/2.html
@@ -3,6 +3,9 @@
 <head>
   <title>Mungeeharu</title>
   <meta charset="utf-8">
+  <style>
+  body {font-family:'Open Sans', sans-serif;}
+  </style>
 </head>
 
 
@@ -10,18 +13,16 @@
 
 <body>
 
-  <h1><a href="index.html"> Mungeeharu</a></h1>
-  <ul>
-    <li><a href="1.html"> HTML♥</a></li>
-    <li><a href="2.html"> CSS♥ </a></li>
-    <li><a href="3.html"> JavaScript♥</a></li>
-    <li><a href="4.html"> Design♥</a></li>
-    <li><a href="5.html"> Disney♥</a></li>
-  </ul>
+  <h1><a href="index.html"> MUNGEEHARU</a></h1>
+  <a href="1.html"> HTML♥</a>
+  <a href="2.html"> CSS♥ </a>
+  <a href="3.html"> JavaScript♥</a>
+  <a href="4.html"> Design♥</a>
+  <a href="5.html"> Disney♥</a>
 
 
-  <img src="uneweb html study.jpg" width="100%">
-    <h2>CSS Study Note</h2>
+
+  <p style="margin-top:50px;"> <h2>CSS Study Note</h2></p>
 
 
 
