--- a/4.html
+++ b/4.html
@@ -3,7 +3,16 @@
 <head>
   <title>Mungeeharu</title>
   <meta charset="utf-8">
-
+  <style>
+  body {font-family:'Open Sans', sans-serif;}
+  </style>
+  <style type="text/css">
+  #wrapper{
+    width: 500px;
+    margin: 0 auto;
+    border: 1px solid #00;
+  }
+  </style>
 </head>
 
 
@@ -11,33 +20,30 @@
 
 <body>
 
-  <div><h1><a href="index.html"> Mungeeharu</a></h1></div>
-  <ul>
-    <li><a href="1.html"> HTML♥</a></li>
-    <li><a href="2.html"> CSS♥ </a></li>
-    <li><a href="3.html"> JavaScript♥</a></li>
-    <li><a href="4.html"> Design♥</a></li>
-    <li><a href="5.html"> Disney♥</a></li>
-  </ul>
+  <h1><a href="index.html"> MUNGEEHARU</a></h1>
+  <a href="1.html"> HTML♥</a>
+  <a href="2.html"> CSS♥ </a>
+  <a href="3.html"> JavaScript♥</a>
+  <a href="4.html"> Design♥</a>
+  <a href="5.html"> Disney♥</a>
 
 
+  <p style="margin-top:50px;"><h2>Study Music</h2></p>
+    <div id="wrapper">
+    <p>
+    <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/_4XrAHOBgHQ" frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope;
+    picture-in-picture" allowfullscreen></iframe>
+    </p>
+    <p>
+    <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/of1ITq5_TDw" frameborder="0"
+    allow="accelerometer; autoplay; encrypted-media; gyroscope;
+    picture-in-picture" allowfullscreen></iframe>
+    </p>
 
-
-  <img src="uneweb html study.jpg" width="100%">
-    <h2>DESIGN Study Note</h2>
-
-<p>
-<iframe width="560" height="315"
-src="https://www.youtube.com/embed/_4XrAHOBgHQ" frameborder="0"
-allow="accelerometer; autoplay; encrypted-media; gyroscope;
-picture-in-picture" allowfullscreen></iframe>
-</p>
-<p>
-<iframe width="560" height="315"
-src="https://www.youtube.com/embed/of1ITq5_TDw" frameborder="0"
-allow="accelerometer; autoplay; encrypted-media; gyroscope;
-picture-in-picture" allowfullscreen></iframe>
-</p>
+  </div>
 
 
 </body>
