--- a/index.html
+++ b/index.html
@@ -3,21 +3,39 @@
 <head>
   <title>Mungeeharu</title>
   <meta charset="utf-8">
+  <style>
+  body {font-family:'Open Sans', sans-serif;}
+  </style>
+
+  <style>
+  body {
+    background-image: url('디즈니페이지(하단).jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  </style>
+
 </head>
+
+
+
+
+
 
 
 
 
 <body>
 
-  <h1><a href="index.html"> Mungeeharu</a></h1>
-  <ul>
-    <li><a href="1.html"> HTML♥</a></li>
-    <li><a href="2.html"> CSS♥ </a></li>
-    <li><a href="3.html"> JavaScript♥</a></li>
-    <li><a href="4.html"> Design♥</a></li>
-    <li><a href="4.html"> Disney♥</a></li>
-  </ul>
+  <h1><a href="index.html"> MUNGEEHARU</a></h1>
+  <a href="1.html"> HTML♥</a>
+  <a href="2.html"> CSS♥ </a>
+  <a href="3.html"> JavaScript♥</a>
+  <a href="4.html"> Design♥</a>
+  <a href="5.html"> Disney♥</a>
+<p>
+<p>
+<p>
 
   <img src="uneweb main img.jpg" width="100%">
 
@@ -28,7 +46,9 @@
 
 
 
-<p style="margin-top:200px;"><a href=https://www.instagram.com/mungeeharu/>Mungeeharu♥</a></p>
+
+
+<p style="margin-top:300px;"><a href=https://www.instagram.com/mungeeharu/>Mungeeharu♥</a></p>
 
 
 </body>
