--- a/5.html
+++ b/5.html
@@ -27,7 +27,7 @@
     <a href="5.html"> Disney♥</a>
 <p>
 <p>
-  <img src="디즈니페이지(상단).jpg" width="100%">
+  <img src="disney1.jpg" width="100%">
   <div id="wrapper">
 <p>
   <iframe width="560" height="315"
@@ -40,7 +40,7 @@ allowfullscreen></iframe>
 
   </div>
 
-  <img src="디즈니페이지(하단).jpg" width="100%">
+  <img src="disney2.jpg" width="100%">
 
 </body>
 </html>
