--- a/4.html
+++ b/4.html
@@ -6,6 +6,15 @@
   <style>
   body {font-family:'Open Sans', sans-serif;}
   </style>
+
+  <style>
+  body {
+    background-image: url('bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  </style>
+
   <style type="text/css">
   #wrapper{
     width: 500px;
@@ -13,6 +22,8 @@
     border: 1px solid #00;
   }
   </style>
+
+
 </head>
 
 
