--- a/5.html
+++ b/5.html
@@ -6,6 +6,15 @@
   <style>
   body {font-family:'Open Sans', sans-serif;}
   </style>
+
+  <style>
+  body {
+    background-image: url('bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  </style>
+
   <style type="text/css">
   #wrapper{
     width: 500px;
@@ -14,7 +23,6 @@
   }
   </style>
 </head>
-
 
 <body>
     <h1><a href="index.html"> MUNGEEHARU</a></h1>
