--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <style>
   body {
-    background-image: url('디즈니페이지(하단).jpg');
+    background-image: url('bg.jpg');
     background-repeat: no-repeat;
     background-size: cover;
   }
