--- a/1.html
+++ b/1.html
@@ -11,7 +11,7 @@
 
     <style>
     body {
-      background-image: url('디즈니페이지(하단).jpg');
+      background-image: url('bg.jpg');
       background-repeat: no-repeat;
       background-size: cover;
     }
@@ -31,7 +31,9 @@
     <a href="3.html"> JavaScript♥</a>
     <a href="4.html"> Design♥</a>
     <a href="5.html"> Disney♥</a>
-
+    <p>
+    <p>
+    <p>
   <img src="uneweb html study.jpg" width="100%">
 
 
