--- a/3.html
+++ b/3.html
@@ -6,6 +6,15 @@
   <style>
   body {font-family:'Open Sans', sans-serif;}
   </style>
+
+  <style>
+  body {
+    background-image: url('bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  </style>
+
 </head>
 
 
