--- a/1.html
+++ b/1.html
@@ -4,18 +4,27 @@
     <title>Mungeeharu</title>
     <meta charset="utf-8">
     <style>
-    body {
-      font-family:'Open Sans', sans-serif;
-    }
+      body {
+        font-family:'Open Sans', sans-serif;
+        background-image: url('bg.jpg');
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      a {
+        color:pink;
+        text-decoration: none;
+        display: block;
+        text-align: center;
+      }
+    </style>
+    <style type="text/css">
+      #wrapper{
+        width: 500px;
+        margin: 0 auto;
+        border: 1px solid #00;
+      }
     </style>
 
-    <style>
-    body {
-      background-image: url('bg.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-    </style>
 
   </head>
 
@@ -25,13 +34,12 @@
   <body>
 
 
-  <h1><a href="index.html"> MUNGEEHARU</a></h1>
-    <a href="web study-1.html"> HTML♥</a>
-    <a href="2.html"> CSS♥ </a>
-    <a href="3.html"> JavaScript♥</a>
-    <a href="4.html"> Design♥</a>
-    <a href="5.html"> Disney♥</a>
-    <p>
+  <h1><a href="index.html" style="color:#5DADE2"> MUNGEEHARU</a></h1>
+    <a href="web study-1.html">HTML♥</a>
+    <a href="2.html">CSS♥ </a>
+    <a href="3.html">JavaScript♥</a>
+    <a href="4.html">Design♥</a>
+    <a href="5.html">Disney♥</a>
     <p>
     <p>
   <img src="uneweb html study.jpg" width="100%">
