--- a/1.html
+++ b/1.html
@@ -68,7 +68,7 @@
         * p style="margin-top:60px;" <br>
 
         <br><h3>C. 통계를 기반으로한 학습</h3>
-        * <u><a href=https://www.advancedwebranking.com/html/>HTML 자주 사용되는 태그 순위</a></u><p>
+        * <a href=https://www.advancedwebranking.com/html/>HTML 자주 사용되는 태그 순위</a><p>
         <img src="통계.jpg" width="60%">
 
         <br><h3>D. Html이 중요한 이유</h3>
