--- a/1.html
+++ b/1.html
@@ -35,7 +35,7 @@
 
 
   <h1><a href="index.html" style="color:#5DADE2"> MUNGEEHARU</a></h1>
-    <a href="web study-1.html">HTML♥</a>
+    <a href="1.html">HTML♥</a>
     <a href="2.html">CSS♥ </a>
     <a href="3.html">JavaScript♥</a>
     <a href="4.html">Design♥</a>
