--- a/1.html
+++ b/1.html
@@ -16,7 +16,12 @@
         display: block;
         text-align: center;
       }
+      h2 {
+        border-bottom:1px solid pink;
+        padding:30px
+      }
     </style>
+
     <style type="text/css">
       #wrapper{
         width: 500px;
@@ -45,7 +50,7 @@
   <img src="uneweb html study.jpg" width="100%">
 
 
-    <p style="margin-top:50px;">  <h2>HTML Study Note</h2></p>
+    <a><p style="margin-top:50px;"><h2>HTML Study Note</h2></p></a>
     <br>
 
 
@@ -63,7 +68,7 @@
             * p style="margin-top:60px;" <br>
 
             <br><h3>C. 통계를 기반으로한 학습</h3>
-            * <a href=https://www.advancedwebranking.com/html/>HTML 자주 사용되는 태그 순위</a><p>
+            * HTML 자주 사용되는 태그 순위<p>
             <img src="통계.jpg" width="60%">
 
             <br><h3>D. Html이 중요한 이유</h3>
@@ -72,7 +77,7 @@
             * 웹은 공공재= 개방성 =접근성 <br>
 
             <br><h3>E. 문법속성&이미지(img)</h3>
-            * <a href=https://unsplash.com/>언플레시</a>(무료 이미지 사이트)<br>
+            * 언플레시(무료 이미지 사이트)<br>
             * img src="스터디" width="100%”<br>
 
             <br><h3>F. 부모, 자식관계의 태그 - 목록</h3>
