--- a/2.html
+++ b/2.html
@@ -16,6 +16,11 @@
         display: block;
         text-align: center;
       }
+      h2 {
+        border-bottom:1px solid pink;
+        padding:30px
+      }
+
     </style>
     <style type="text/css">
       #wrapper{
@@ -41,7 +46,7 @@
     <a href="4.html">Design♥</a>
     <a href="5.html">Disney♥</a>
 
-  <p style="margin-top:50px;"> <h2>CSS Study Note</h2></p>
+    <p style="margin-top:50px;"><a><h2>CSS Study Note</h2></p></a>
 
 
 
