--- a/3.html
+++ b/3.html
@@ -16,6 +16,10 @@
         display: block;
         text-align: center;
       }
+      h2 {
+        border-bottom:1px solid pink;
+        padding:30px
+      }
     </style>
     <style type="text/css">
       #wrapper{
@@ -41,4 +45,4 @@
     <a href="4.html">Design♥</a>
     <a href="5.html">Disney♥</a>
 
-    <p style="margin-top:50px;"><h2>JavaSctipt Study Note</h2></p>
+    <p style="margin-top:50px;"><a><h2>JavaSctipt Study Note</h2></a></p>
