--- a/4.html
+++ b/4.html
@@ -16,6 +16,10 @@
         display: block;
         text-align: center;
       }
+      h2 {
+        border-bottom:1px solid pink;
+        padding:30px
+      }
     </style>
     <style type="text/css">
       #wrapper{
