--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         text-decoration: none;
         display: block;
         text-align: center;
+
       }
     </style>
     <style type="text/css">
@@ -54,8 +55,8 @@
 
 
 
-
-<a><p style="margin-top:250px;"><a href=https://www.instagram.com/mungeeharu/>Mungeeharu♥</a></p></a>
+<a><p style="margin-top:40px;"><a href=https://www.instagram.com/mungeeharu/><img src="logo.png" width="10%"></p></a></a>
+<a><a href=https://www.instagram.com/mungeeharu/>Mungeeharu♥</a></a>
 
 
 </body>
