--- a/4.html
+++ b/4.html
@@ -22,7 +22,7 @@
       }
     </style>
     <style type="text/css">
-      #wrapper{
+      .wrapper{
         width: 500px;
         margin: 0 auto;
         border: 1px solid #00;
@@ -46,7 +46,7 @@
 
 
   <a><p style="margin-top:50px;"><h2>Study Music</h2></p></a>
-    <div id="wrapper">
+    <div class="wrapper">
     <p>
     <iframe width="560" height="315"
     src="https://www.youtube.com/embed/_4XrAHOBgHQ" frameborder="0"
