--- a/5.html
+++ b/5.html
@@ -17,8 +17,8 @@
         text-align: center;
       }
     </style>
-    <style type="text/css">
-      #wrapper{
+    <style>
+      .wrapper{
         width: 500px;
         margin: 0 auto;
         border: 1px solid #00;
@@ -42,7 +42,7 @@
 <p>
 <p>
   <img src="disney1.jpg" width="100%">
-  <div id="wrapper">
+  <div class="wrapper">
 <p>
   <iframe width="560" height="315"
 src="https://www.youtube.com/embed/Viy9XB43h6Q"
