--- a/1.html
+++ b/1.html
@@ -39,7 +39,9 @@
   <body>
 
 
-  <h1><a href="index.html" style="color:#5DADE2"> MUNGEEHARU</a></h1>
+  <h1>
+    <a href="index.html" style="color:#5DADE2"> MUNGEEHARU</a>
+  </h1>
     <a href="1.html">HTML♥</a>
     <a href="2.html">CSS♥ </a>
     <a href="3.html">JavaScript♥</a>
@@ -50,7 +52,9 @@
   <img src="uneweb html study.jpg" width="100%">
 
 
-    <a><p style="margin-top:50px;"><h2>HTML Study Note</h2></p></a>
+    <a>
+      <p style="margin-top:50px;"><h2>HTML Study Note</h2></p>
+    </a>
     <br>
 
 
@@ -102,7 +106,7 @@
             <br><h3>I. 웹의 기원</h3>
             * 웹의 메소포타미아 <br>
             <br>
-            <a href="http://info.cern.ch"><img src="메소포타미아.jpg" width="60%"></a><br>
+            <img src="메소포타미아.jpg" width="60%">
 
 
 
