--- a/2.html
+++ b/2.html
@@ -49,6 +49,23 @@
     <p style="margin-top:50px;"><a><h2>CSS Study Note</h2></p></a>
 
 
+    <h3><.div> 속성</h3>
+
+
+    1. style은 <.div>태그의 스타일을 지정해주는 것으로 다른 속성들을 사용할 수 있게끔 해줍니다. <.div style=""><br>
+
+    2. width는 <.div>의 가로 크기를 정해줍니다. px(픽셀)단위로도 정할 수 있고 %(비율)단위로도 정할 수 있습니다.<br>
+
+    3. height는 <.div>의 세로 크기를 정해줍니다. px(픽셀)단위로도 정할 수 있고 %(비율)단위로도 정할 수 있습니다.<br>
+
+    4. border은 <.div>의 테두리의 굵기를 정해줍니다. 숫자가 클수록 굵기가 굵어집니다.<br>
+
+    5. background-color은 <.div>태그의 배경색상을 정하는 속성입니다.<br>
+
+    6. float은 div의 정렬(좌,우)을 하는 속성입니다. 가운데정렬은 안됩니다.<br>
+
+    7. margin은 div의 정렬기준 끝에서부터 여백을 주는 속성입니다. (margin-top,margin,-bottom,margin-left,margin-right)<br>
+
 
 
 
