--- a/1.html
+++ b/1.html
@@ -47,6 +47,8 @@
     <a href="3.html">JavaScript♥</a>
     <a href="4.html">Design♥</a>
     <a href="5.html">Disney♥</a>
+    <a href="6.home training.html">Home Training♥</a>
+
     <p>
     <p>
   <img src="uneweb html study.jpg" width="100%">
