--- a/2.html
+++ b/2.html
@@ -45,6 +45,7 @@
     <a href="3.html">JavaScript♥</a>
     <a href="4.html">Design♥</a>
     <a href="5.html">Disney♥</a>
+    <a href="6.home training.html">Home Training♥</a>
 
     <p style="margin-top:50px;"><a><h2>CSS Study Note</h2></p></a>
 
