--- a/4.html
+++ b/4.html
@@ -43,22 +43,23 @@
     <a href="3.html">JavaScript♥</a>
     <a href="4.html">Design♥</a>
     <a href="5.html">Disney♥</a>
+    <a href="6.home training.html">Home Training♥</a>
 
 
   <a><p style="margin-top:50px;"><h2>Study Music</h2></p></a>
-    <div class="wrapper">
-    <p>
+  <div class="wrapper">
+  <p>
     <iframe width="560" height="315"
     src="https://www.youtube.com/embed/_4XrAHOBgHQ" frameborder="0"
-    allow="accelerometer; autoplay; encrypted-media; gyroscope;
-    picture-in-picture" allowfullscreen></iframe>
-    </p>
-    <p>
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen></iframe>
+  </p>
+  <p>
     <iframe width="560" height="315"
     src="https://www.youtube.com/embed/of1ITq5_TDw" frameborder="0"
     allow="accelerometer; autoplay; encrypted-media; gyroscope;
     picture-in-picture" allowfullscreen></iframe>
-    </p>
+  </p>
 
   </div>
 
