--- a/5.html
+++ b/5.html
@@ -38,6 +38,7 @@
     <a href="3.html">JavaScript♥</a>
     <a href="4.html">Design♥</a>
     <a href="5.html">Disney♥</a>
+    <a href="6.home training.html">Home Training♥</a>
 
 <p>
 <p>
